--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="Urna Eletronica/style.css">
     <title>Urna Eletrônica</title>
 </head>
 <body>
@@ -75,7 +75,7 @@
 
 
 
-    <script src="etapas.js"></script><!--Json sempre antes do script-->
-    <script src="script.js"></script>
+    <script src="Urna Eletronica/etapas.js"></script><!--Json sempre antes do script-->
+    <script src="Urna Eletronica/script.js"></script>
 </body>
 </html>
