--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                 <div class="d-1-right">
                     
                     <div class="d-1-image">
-                        <img src="images/84.jpg" alt=""/>
+                        <img src="Urna Eletronica/images/84.jpg" alt=""/>
                         Prefeito
                     </div>
                     <div class="d-1-image small">
-                        <img src="images/84_2.jpg" alt=""/>
+                        <img src="Urna Eletronica/images/84_2.jpg" alt=""/>
                         Vice-Prefeito
                     </div>
                 </div>
